--- a/Homework 1/desktop.ini
+++ b/Homework 1/desktop.ini
@@ -1,2 +1,3 @@
 [LocalizedFileNames]
 Screenshot 2024-08-29 134928.png=@Screenshot 2024-08-29 134928,0
+Screenshot 2024-09-09 182933.png=@Screenshot 2024-09-09 182933,0
